view/style.css
/* ... */
/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/*                TODAY'S TRIGRAM IS...                     */
/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
#trigramRevealScreen {
	background-color: hsla(var(--c1-hue), var(--c1-sat), var(--c1-med), 0.7);
	color: hsl(var(--c1-hue), var(--c1-sat), var(--c1-dark));
}

#trigramRevealScreen.showTemporarily {
	animation: show-temporarily 5s ease;
}

#trigramRevealScreenContent {
	background-color: hsl(var(--c1-hue), var(--c1-sat), var(--c1-med));
}

#trigramRevealScreen h3 {
	font-size: 1.5rem;
	padding-bottom: 1rem;
}

#trigramRevealScreen h4 {
	font-size: 1.125rem;
	padding-top: 0.75rem;
}

#trigramReveal {
	width: 14.75rem;
	padding: 1.5rem 1rem;
	border: 6px solid;
	border-radius: 24px;

	display: flex;
	align-items: center;
	justify-content: space-around;

	background-color: white;

	font-size: 4rem;
	font-weight: bold;
}

/* #trigramReveal span {
	width: 4rem;
	text-align: center;
} */

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/*                YOU WIN OVERLAY                           */
/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
#youWinScreen {
	display: none;
	opacity: 0;
	background-color: hsla(var(--c3-hue), var(--c3-sat), var(--c3-med), 0.7);
	color: hsl(var(--c3-hue), var(--c3-sat), var(--c3-dark));
}

#youWinScreen.fade-in {
	opacity: 1;
	animation: fade-in 2s ease;
}

#youWinScreen.fade-out {
	animation: fade-out 1s ease;
}

#youWinScreenContent {
	background-color: hsl(var(--c3-hue), var(--c3-sat), var(--c3-med));
}

#youWinScreenContent h3 {
	font-size: 4rem;
	padding-bottom: 1em;
}

#youWinScreenButtons {
	display: flex;
	flex-flow: column nowrap;
	gap: 0.875rem;
}

#youWinScreenButtons button {
	background-color: hsl(var(--c3-hue), var(--c3-sat), var(--c3-light));
	color: hsl(var(--c3-hue), var(--c3-sat), var(--c3-dark));
	padding: 10px 20px;
	border: 3px solid;
	border-bottom: 6px solid;
	height: 3.5rem;
	font-size: 1.5rem;
	font-weight: bold;
	border-radius: 8px;
	cursor: pointer;
	position: relative;
}

button#viewStatsButton {
	background-color: transparent;
}

#youWinScreenButtons button:active {
	border: 3px solid;
	border-bottom: 4px solid;
	transform: translateY(2px);
}

#youWinScreenButtons i {
	padding-right: 0.375rem;
	/* font-size: 0.875em; */
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/*                NO LANDSCAPE SCREEN                       */
/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
#noLandscapeScreen {
	display: none;
	z-index: var(--z-noLandscape);
	width: 100%;
	height: 100%;
	background-color: black;

	flex-flow: column nowrap;
	align-items: center;
	justify-content: center;
}

#noLandscapeMessage {
	display: flex;
	flex-flow: column nowrap;
	align-items: center;
	justify-content: center;
	color: white;
	font-size: 1.25rem;
}

#noLandscapeMessage img {
	max-width: 25%;
	height: auto;
	margin-bottom: 1.5rem;
}

#noLandscapeMessage p:last-child {
	font-weight: bold;
}

/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
/*                ANIMATIONS                                */
/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */

@keyframes fade-in {
	0% {
		opacity: 0;
	}
	50% {
		opacity: 0;
	}
	100% {
		opacity: 1;
	}
}

@keyframes fade-out {
	15% {
		opacity: 1;
	}
	85% {
		opacity: 0;
	}
	100% {
		opacity: 0;
	}
}

@keyframes show-temporarily {
	10% {
		opacity: 1;
	}
	80% {
		opacity: 1;
	}
	100% {
		opacity: 0;
	}
}

@keyframes shake {
	10% {
		transform: translateX(-1.5%);
	}
	30% {
		transform: translateX(1.5%);
	}
	50% {
		transform: translateX(-2.5%);
	}
	70% {
		transform: translateX(2.5%);
	}
	90% {
		transform: translateX(-1.5%);
	}
	100% {
		transform: translateX(0%);
	}
}

